--- a/src/main/resources/templates/trafficInsuranceCalculate.html
+++ b/src/main/resources/templates/trafficInsuranceCalculate.html
@@ -90,6 +90,8 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Most Comprehensive Offer</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Original Glass (Exempt)</p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/result">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
                                             <input type="hidden" name="companyId" value=1>
@@ -113,6 +115,7 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>All Authorized Services and Special Services</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Original Glass (Exempt)</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Mini-Repair: Yes</p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/result">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
                                             <input type="hidden" name="companyId" value=2>
