--- a/src/main/resources/templates/homeInsuranceCalculate.html
+++ b/src/main/resources/templates/homeInsuranceCalculate.html
@@ -91,6 +91,8 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Full Home and Belongings Coverage</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Fire, Theft, Natural Disasters</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Temporary Housing during Repairs</p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/homeResult">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
                                             <input type="hidden" name="companyId" value=1>
@@ -114,6 +116,7 @@
                                         <p class="porject-plan"><i class='bx bx-check'></i>Fire, Theft, Natural Disasters</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Temporary Housing during Repairs</p>
                                         <p class="porject-plan"><i class='bx bx-check'></i>Optional Valuables Coverage</p>
+                                        <p class="porject-plan"><i class='bx bx-check' style="opacity: 0;"></i></p>
                                         <form th:object="${insurance}" method="post" name="myForm" action="/homeResult">
                                             <input type="hidden" name="insuranceId" th:value="${insurance.insuranceId}">
                                             <input type="hidden" name="companyId" value=2>
